--- a/static/css/main.css
+++ b/static/css/main.css
@@ -212,6 +212,7 @@ CSS For the TankCard Class
 
     /*width:100%;*/
     margin:5px;
+    padding: 8px;
     box-shadow: 1px 1px 1px #000000;
     background-color:#800000 !important;
     border-color:#800000 !important;
